# GifClipper

./: CMakeLists.txt  GifClipper_Resources.qrc  Package.bat  README.md  gifc_mainwindow.cpp  gifc_mainwindow.h  gifc_mainwindow.ui  icon.rc  main.cpp  qt3_codestyle.xml
QFFmpeg/: QFFmpegFunctionLib.cpp  QFFmpegFunctionLib.h  TranscoderFactory.h  TranscoderInterface.h  TranscoderQualityStatics.h
QFFmpeg/Transcoders/: GifCmdTranscoder.cpp  GifCmdTranscoder.h  GifTranscoder.cpp  GifTranscoder.h  MP4CmdTranscoder.cpp  MP4CmdTranscoder.h  MP4Transcoder.cpp  MP4Transcoder.h
QSimpleTimeline/: QSimpleTimeline.cpp  QSimpleTimeline.h
QStyleManager/: QStyleManager.cpp  QStyleManager.h  Readme.txt
QStyleManager/dark/: darkstyle.qrc
QStyleManager/light/: lightstyle.qrc
QVideoPlayer/: QVideoPlayer.cpp  QVideoPlayer.h  QVideoPlayerWidget.cpp  QVideoPlayerWidget.h
